<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/BackArrow2"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:contentDescription="@string/IDescription1"
                        android:src="@drawable/back_arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/BackArrow2"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteY="0dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/SProfile"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Step1" />

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:progress="25"
            android:progressTint="#0D0D0D" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingBottom="16dp">

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="110dp"
                        android:layout_height="82dp"
                        android:layout_marginTop="32dp"
                        android:layout_weight="1"
                        android:background="@drawable/icon_background"
                        android:baselineAligned="false"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="171dp"
                                android:layout_height="55dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="8dp"
                                android:contentDescription="@string/MainPage1"
                                android:src="@drawable/name"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:text="@string/MTitle1"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:layout_weight="1"
                        android:text="@string/ITitle1"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        tools:layout_editor_absoluteX="0dp" />

                    <EditText
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/userinput_background"
                        android:ems="10"
                        android:hint="@string/RName"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView9"
                        tools:ignore="VisualLintTextFieldSize"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_weight="1"
                        android:text="@string/InnTitle2"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/Email" />

                    <EditText
                        android:id="@+id/Password"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/userinput_background"
                        android:ems="10"
                        android:hint="@string/InnTitle1"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textSize="18sp"
                        app:layout_constraintTop_toBottomOf="@+id/textView10" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/action_box"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:orientation="horizontal"
                android:padding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/Continue"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>